nginx_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx
  namespace: argocd-user1
  uid: 7a2d9997-e379-480f-a242-e26092fa71f5
  resourceVersion: '1349487'
  creationTimestamp: '2023-10-23T15:27:28Z'
  labels:
    app: nginx
    app.kubernetes.io/component: nginx
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/name: nginx
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-10-23T15:27:28Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-10-23T15:27:28Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
spec:
  host: nginx-argocd-user1.apps.cluster-rmzqt.sandbox1233.opentlc.com
  to:
    kind: Service
    name: nginx
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
status:
  ingress:
    - host: nginx-argocd-user1.apps.cluster-rmzqt.sandbox1233.opentlc.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2023-10-23T15:27:28Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.cluster-rmzqt.sandbox1233.opentlc.com
